impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_ai.snap
---
source: crates/wlwl-error/src/lib.rs
expression: "serde_json::json!({\n    \"E0080\": code_snap(ErrorCode::E0080, \"ai_unreachable\"), \"E0081\":\n    code_snap(ErrorCode::E0081, \"ai_auth\"), \"E0082\":\n    code_snap(ErrorCode::E0082, \"ai_malformed\"), \"E0083\":\n    code_snap(ErrorCode::E0083, \"ai_timeout\"),\n})"
---
{
  "E0080": {
    "code": "E0080",
    "error_category": "ai",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for ai_unreachable",
    "related": [],
    "retry_after": 5000,
    "retryable": true,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0081": {
    "code": "E0081",
    "error_category": "ai",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for ai_auth",
    "related": [],
    "retry_after": 5000,
    "retryable": true,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0082": {
    "code": "E0082",
    "error_category": "ai",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for ai_malformed",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0083": {
    "code": "E0083",
    "error_category": "ai",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for ai_timeout",
    "related": [],
    "retry_after": 10000,
    "retryable": true,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
