impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_concurrent.snap
---
source: crates/wlwl-error/src/lib.rs
assertion_line: 1340
expression: "serde_json::json!({\n    \"E0052\": code_snap(ErrorCode::E0052, \"scope_fn_not_function\"), \"E0053\":\n    code_snap(ErrorCode::E0053, \"task_handle_invalid\"), \"E0054\":\n    code_snap(ErrorCode::E0054, \"channel_send_closed\"), \"E0056\":\n    code_snap(ErrorCode::E0056, \"spawn_arity_mismatch\"), \"E0058\":\n    code_snap(ErrorCode::E0058, \"spawn_no_active_scope\"),\n})"
---
{
  "E0052": {
    "code": "E0052",
    "error_category": "concurrent",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for scope_fn_not_function",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0053": {
    "code": "E0053",
    "error_category": "concurrent",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for task_handle_invalid",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0054": {
    "code": "E0054",
    "error_category": "concurrent",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for channel_send_closed",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0056": {
    "code": "E0056",
    "error_category": "concurrent",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for spawn_arity_mismatch",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0058": {
    "code": "E0058",
    "error_category": "concurrent",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for spawn_no_active_scope",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
