impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_json.snap
---
source: crates/wlwl-error/src/lib.rs
expression: "serde_json::json!({\n    \"E0070\": code_snap(ErrorCode::E0070, \"json_parse\"), \"E0071\":\n    code_snap(ErrorCode::E0071, \"json_stringify\"),\n})"
---
{
  "E0070": {
    "code": "E0070",
    "error_category": "json",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for json_parse",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0071": {
    "code": "E0071",
    "error_category": "json",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for json_stringify",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
