impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_lexical.snap
---
source: crates/wlwl-error/src/lib.rs
expression: "serde_json::json!({\n    \"E0001\": code_snap(ErrorCode::E0001, \"illegal_char\"), \"E0002\":\n    code_snap(ErrorCode::E0002, \"unterminated_string\"), \"E0003\":\n    code_snap(ErrorCode::E0003, \"unterminated_block_comment\"),\n})"
---
{
  "E0001": {
    "code": "E0001",
    "error_category": "lexical",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for illegal_char",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0002": {
    "code": "E0002",
    "error_category": "lexical",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for unterminated_string",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0003": {
    "code": "E0003",
    "error_category": "lexical",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for unterminated_block_comment",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
