impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_module.snap
---
source: crates/wlwl-error/src/lib.rs
expression: "serde_json::json!({\n    \"E0040\": code_snap(ErrorCode::E0040, \"mod_not_found\"), \"E0041\":\n    code_snap(ErrorCode::E0041, \"circular_import\"), \"E0042\":\n    code_snap(ErrorCode::E0042, \"file_io_err\"), \"E0043\":\n    code_snap(ErrorCode::E0043, \"ns_path_syntax\"),\n})"
---
{
  "E0040": {
    "code": "E0040",
    "error_category": "module",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for mod_not_found",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0041": {
    "code": "E0041",
    "error_category": "module",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for circular_import",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0042": {
    "code": "E0042",
    "error_category": "module",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for file_io_err",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0043": {
    "code": "E0043",
    "error_category": "module",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for ns_path_syntax",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
