impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_name.snap
---
source: crates/wlwl-error/src/lib.rs
assertion_line: 849
expression: "serde_json::json!({\n    \"E0020\": code_snap(ErrorCode::E0020, \"undefined\"), \"E0021\":\n    code_snap(ErrorCode::E0021, \"duplicate\"), \"E0022\":\n    code_snap(ErrorCode::E0022, \"arity_mismatch\"), \"E0023\":\n    code_snap(ErrorCode::E0023, \"not_exported\"), \"E0024\":\n    code_snap(ErrorCode::E0024, \"set_non_captured\"), \"E0025\":\n    code_snap(ErrorCode::E0025, \"shadow_builtin\"), \"E0026\":\n    code_snap(ErrorCode::E0026, \"destructure_mismatch\"), \"E0027\":\n    code_snap(ErrorCode::E0027, \"match_fallthrough\"),\n})"
---
{
  "E0020": {
    "code": "E0020",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for undefined",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0021": {
    "code": "E0021",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for duplicate",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0022": {
    "code": "E0022",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for arity_mismatch",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0023": {
    "code": "E0023",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for not_exported",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0024": {
    "code": "E0024",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for set_non_captured",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0025": {
    "code": "E0025",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for shadow_builtin",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0026": {
    "code": "E0026",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for destructure_mismatch",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0027": {
    "code": "E0027",
    "error_category": "name",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for match_fallthrough",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
