impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_network.snap
---
source: crates/wlwl-error/src/lib.rs
assertion_line: 1133
expression: "serde_json::json!({\n    \"E0090\": code_snap(ErrorCode::E0090, \"net_unreachable\"), \"E0091\":\n    code_snap(ErrorCode::E0091, \"dns_failure\"), \"E0092\":\n    code_snap(ErrorCode::E0092, \"tls_error\"), \"E0093\":\n    code_snap(ErrorCode::E0093, \"http_4xx\"), \"E0094\":\n    code_snap(ErrorCode::E0094, \"http_5xx\"),\n})"
---
{
  "E0090": {
    "code": "E0090",
    "error_category": "network",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for net_unreachable",
    "related": [],
    "retry_after": 3000,
    "retryable": true,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0091": {
    "code": "E0091",
    "error_category": "network",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for dns_failure",
    "related": [],
    "retry_after": 3000,
    "retryable": true,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0092": {
    "code": "E0092",
    "error_category": "network",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for tls_error",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0093": {
    "code": "E0093",
    "error_category": "network",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for http_4xx",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0094": {
    "code": "E0094",
    "error_category": "network",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wl",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for http_5xx",
    "related": [],
    "retry_after": 5000,
    "retryable": true,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
