impl/crates/wlwl-error/src/snapshots/wlwl_error__tests__codes_test.snap
---
source: crates/wlwl-error/src/lib.rs
expression: "serde_json::json!({\n    \"E0046\": code_snap(ErrorCode::E0046, \"test_assertion_failed\"), \"E0047\":\n    code_snap(ErrorCode::E0047, \"test_assertion_eq_failed\"), \"E0048\":\n    code_snap(ErrorCode::E0048, \"test_assertion_neq_failed\"), \"E0049\":\n    code_snap(ErrorCode::E0049, \"test_expect_err_failed\"),\n})"
---
{
  "E0046": {
    "code": "E0046",
    "error_category": "test",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for test_assertion_failed",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0047": {
    "code": "E0047",
    "error_category": "test",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for test_assertion_eq_failed",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0048": {
    "code": "E0048",
    "error_category": "test",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for test_assertion_neq_failed",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  },
  "E0049": {
    "code": "E0049",
    "error_category": "test",
    "error_schema_version": "1.1.0",
    "hint": null,
    "idempotent": false,
    "location": {
      "col_end": 1,
      "col_start": 1,
      "file": "snap.wll",
      "line": 1,
      "line_end": 1
    },
    "message": "snapshot for test_expect_err_failed",
    "related": [],
    "retry_after": null,
    "retryable": false,
    "severity": "error",
    "source_line": null,
    "suggestion_code": []
  }
}
